# mcp-servers

./: .flake8  .gitignore  LICENSE  Makefile  README.md  client.py  package-lock.json  pyproject.toml
clickup/: README.md  pyproject.toml  wrangler.jsonc
clickup/src/: clickup.py  main.py  server.py  worker.py
client/: auth.py  localserver.py  main.py  utils.py
discord/: Makefile  README.md  pyproject.toml  vendor.txt  wrangler.jsonc
discord/src/: discord.py  main.py  server.py
hello/: README.md  pyproject.toml  server.py  wrangler.jsonc
hello/src/: server.py  worker.py
mailgun/: README.md  pyproject.toml  wrangler.jsonc
mailgun/src/: mailgun.py  server.py
oauth2/: README.md  pyproject.toml  server.py  vendor.txt  wrangler.jsonc
oauth2/src/: cf.py  clients.py  local.py  main.py  server.py  worker.py
open-meteo/: Makefile  README.md  pyproject.toml  vendor.txt  wrangler.jsonc
open-meteo/src/: main.py  server.py  worker.py
scripts/: build.sh
weather/: Makefile  README.md  pyproject.toml  wrangler.jsonc
weather/src/: httpx_patch.py  server.py  worker.py
