[project]
name = "mcp-servers"
version = "0.1.0"
description = "A collection of example servers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "mcp[cli]>=1.9.4"
]

[tool.uv.workspace]
members = [
    "hello",
    "oauth2",
    "clickup",
    "discord",
    "mailgun",
    "weather"
]
