[project]
name = "discord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.5.2",
    "itsdangerous>=2.2.0",
    "jotsu-mcp>=0.3.1",
    "structlog>=25.3.0",
]

[dependency-groups]
dev = [
    "flake8>=7.2.0",
    "flake8-quotes>=3.4.0",
    "pyodide-build>=0.30.4",
]
